--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.84.0",
     "@tanstack/react-query": "^5.83.0",
+    "@types/react-window": "^1.8.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -59,7 +60,10 @@
     "react-is": "^19.2.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
-    "recharts": "^3.5.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-virtuoso": "^4.16.1",
+    "react-window": "^2.2.3",
+    "recharts": "^3.5.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
